@@ -10,6 +10,8 @@ import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.JsonFactory;
 import com.google.api.client.json.gson.GsonFactory;
 import com.google.api.client.util.store.FileDataStoreFactory;
+import com.google.api.services.gmail.Gmail;
+import com.google.api.services.gmail.GmailScopes;
 import com.google.api.services.sheets.v4.Sheets;
 import com.google.api.services.sheets.v4.SheetsScopes;
 import java.io.IOException;
@@ -24,10 +26,11 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.core.io.ClassPathResource;
 
 @Configuration
-public class SpreadSheetsConfig {
+public class GoogleApiConfig {
 
   private static final JsonFactory JSON_FACTORY = GsonFactory.getDefaultInstance();
-  private static final List<String> SCOPES = Collections.singletonList(SheetsScopes.SPREADSHEETS);
+  private static final List<String> SCOPES =
+      List.of(SheetsScopes.SPREADSHEETS, GmailScopes.GMAIL_SEND);
 
   @Value("${google.spread-sheets.application-name}")
   private String applicationName;
@@ -39,12 +42,10 @@ public class SpreadSheetsConfig {
   private String credentialsPath;
 
   private Credential getCredentials(final NetHttpTransport httpTransport) throws IOException {
-    // Load client secrets.
     InputStream in = new ClassPathResource(credentialsPath).getInputStream();
     GoogleClientSecrets clientSecrets =
         GoogleClientSecrets.load(JSON_FACTORY, new InputStreamReader(in));
 
-    // Build flow and trigger user authorization request.
     GoogleAuthorizationCodeFlow flow =
         new GoogleAuthorizationCodeFlow.Builder(httpTransport, JSON_FACTORY, clientSecrets, SCOPES)
             .setDataStoreFactory(new FileDataStoreFactory(new java.io.File(tokensDirectoryPath)))
@@ -58,6 +59,14 @@ public class SpreadSheetsConfig {
   public Sheets sheets() throws GeneralSecurityException, IOException {
     final NetHttpTransport httpTransport = GoogleNetHttpTransport.newTrustedTransport();
     return new Sheets.Builder(httpTransport, JSON_FACTORY, getCredentials(httpTransport))
+        .setApplicationName(applicationName)
+        .build();
+  }
+
+  @Bean
+  public Gmail gmail() throws IOException {
+    final NetHttpTransport httpTransport = new NetHttpTransport();
+    return new Gmail.Builder(httpTransport, JSON_FACTORY, getCredentials(httpTransport))
         .setApplicationName(applicationName)
         .build();
   }
